Filled out the documentation
