# routes/api.php
@@ -16,7 +16,7 @@ use Illuminate\Http\Request;
 // Route::middleware('auth:api')->get('/user', function (Request $request) {
 //     return $request->user();
 // });
-Route::post('/user', 'UserApiController@create');
+Route::post('/user', 'UserApiController@createUser');
 
 Route::get('/users', 'UserApiController@all');
 Route::get('/user/{id}', 'UserApiController@getUser');
